<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Kikkersprong</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <color name="bgcolor">#84C185</color>

    <string name="title_activity_info">Info</string>
    <string name="kikkersprong">Kikkersprong</string>

    <color name="btncolor">#ff6b35</color>

    <string name="scan">Nu Scannen</string>
    <string name="info">Info</string>

    <color name="infcolor">#3fa9f5</color>

    <string name="welkom">Welkom</string>
    <string name="slogan">Jouw mobiele kinderoppas</string>

    <color name="slogancolor">#ff0000</color>

    <string name="info1">Wat kan je met deze app?</string>
    <string name="info2">Het in- en uitchecken van kinderen via het scannen van een QR code</string>
    <string name="info3">Het opvragen van gegevens en aanwezigheden van de kinderen</string>
    <string name="info4">Automatische berekening van de kost(en) op basis van aanwezigheden en controle op betaling</string>
    <string name="startpagina">Startpagina</string>
    <string name="started">false</string>
    <string name="title_activity_member">MemberPage</string>
    <string name="picture">Foto</string>
    <string name="checkin">Inchecken</string>
    <string name="presency">Aanwezigheden</string>
    <string name="bills">Rekeningen</string>
    <string name="naam">Bjorn Billen</string>
    <string name="dob">17/02/1992</string>
    <string name="memberinfo">Wat wil je doen?</string>
    <string name="qrcode">Scan je QR code</string>
    <string name="qrcodeinfo">Check het kind in (of uit)</string>
    <string name="qrcodeinfo2">Bekijk aanwezigheden en rekeningen</string>
    <string name="textclock"></string>
    <string name="title_activity_checkin">CheckinPage</string>
    <string name="title_activity_bills">BillsPage</string>
    <string name="title_activity_attendance">AttendancePage</string>
    <string name="checked">Je bent nu</string>
    <string name="checkstatus" />

    <color name="checkedin">#14E009</color>
    <color name="checkedout">#FF0000</color>

    <string name="title_activity_add_member">AddMemberActivity</string>
    <string name="checkindate" />
    <string name="membername" />
    <string name="aanwezigheden">Aanwezigheden</string>
    <string name="listviewdate">DATE</string>
    <string name="aantaluur">6u</string>
    <string name="datum">Datum</string>
    <string name="aantalu">Aantal u</string>
    <string name="betaald">Betaald</string>
    <string name="amount">Bedrag</string>
    <string name="title_activity_admin">AdminActivity</string>
    <string name="beheerder">Beheerder</string>
    <string name="addmember">Kind toevoegen</string>
    <string name="setpriceperhour">Prijs per uur aanpassen</string>
    <string name="exportbills">Beheer rekeningen</string>
    <string name="viewmembers">Alle kinderen</string>
    <string name="viewaanwezigheden">Alle aanwezigheden</string>
    <string name="viewbet">Alle rekeningen</string>
    <string name="adminname" />
    <string name="kindtoevoegen">Kind toevoegen</string>
    <string name="form_imageurl">URL voor foto (niet verplicht)</string>
    <string name="form_naam">Voornaam en Naam</string>
    <string name="form_gebdatum">Geboortedatum (dd/mm/yyyy)</string>
    <string name="toevoegen">Toevoegen</string>
    <string name="onupdatetext" />
    <string name="title_activity_view_members">ViewMembersActivity</string>
    <string name="kinderen">Kinderen</string>
    <string name="viewmemberid"></string>
    <string name="viewmembername" />
    <string name="viewmemberdob" />
    <string name="attendancename" />
    <string name="instellingen">Instellingen</string>
    <string name="editmember">Kind wijzigen</string>
    <string name="title_activity_edit_member">EditMemberActivity</string>
    <string name="editmembers">Kinderen wijzigen</string>
    <string name="wijzigen">Wijzigen</string>
    <string name="delete">Verwijderen</string>
    <string name="title_activity_edit_bill">EditBillActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="beheer">Beheer rekeningen</string>
    <string name="setbetaald">Markeer als betaald</string>
    <string name="exporteernaarpdf">Rekening exporteren (PDF)</string>
    <string name="bedrag">Bedrag</string>

</resources>
