<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgcolor"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".InfoActivity" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentEnd="false"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="false"
        android:layout_alignParentTop="true"
        android:scaleType="fitStart"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/main_title"
        android:layout_below="@+id/main_title"
        android:text="@string/slogan"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/slogancolor" />

    <Button
        android:id="@+id/startbutton"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/textView5"
        android:background="@color/infcolor"
        android:text="@string/startpagina" />

    <ImageView
        android:id="@+id/check3"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_alignLeft="@+id/check2"
        android:layout_below="@+id/textView4"
        android:layout_marginTop="30dp"
        android:src="@drawable/checkicon" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/check3"
        android:layout_alignTop="@+id/check3"
        android:layout_marginLeft="30dp"
        android:text="@string/info4"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <ImageView
        android:id="@+id/check1"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_above="@+id/check2"
        android:layout_alignLeft="@+id/textView1"
        android:layout_marginBottom="27dp"
        android:src="@drawable/checkicon" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/check1"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/check1"
        android:layout_marginLeft="30dp"
        android:text="@string/info2"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/check1"
        android:layout_alignLeft="@+id/imageView1"
        android:layout_marginBottom="14dp"
        android:text="@string/info1"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ImageView
        android:id="@+id/check2"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_alignLeft="@+id/check1"
        android:layout_centerVertical="true"
        android:layout_marginTop="15dp"
        android:src="@drawable/checkicon" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView5"
        android:layout_alignTop="@+id/check2"
        android:text="@string/info3"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/main_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/textView3"
        android:layout_alignTop="@+id/imageView1"
        android:layout_marginTop="15dp"
        android:text="@string/kikkersprong"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="30sp" />

</RelativeLayout>
