<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/list_bg"
    android:orientation="horizontal"
    android:padding="5dip" >
    <!-- ListRow Left side Thumbnail image -->

    <TextView
        android:id="@+id/datelistview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/listviewdate"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/aantaluurlistview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/datelistview"
        android:layout_alignBottom="@+id/datelistview"
        android:layout_alignParentRight="true"
        android:layout_marginRight="18dp"
        android:text="@string/aantaluur"
        android:textColor="#000000"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/attendancename"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/datelistview"
        android:layout_alignParentLeft="true"
        android:text="@string/attendancename"
        android:textColor="#000000"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>  