<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@color/btncolor"
    android:gravity="fill"
    tools:context=".MemberActivity" >

    <TextView
        android:id="@+id/gebdatum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/naam"
        android:layout_below="@+id/naam"
        android:padding="10dp"
        android:text="@string/dob"
        android:textColor="#FFFFFF" />

    <GridLayout
        android:id="@+id/GridLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:background="@color/infcolor"
        android:columnCount="3"
        android:orientation="horizontal"
        android:paddingBottom="0dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp" >

        <TextView
            android:id="@+id/textView2"
            android:layout_column="0"
            android:layout_gravity="center_horizontal|top"
            android:layout_row="0"
            android:text="@string/checkin"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/textView3"
            android:layout_column="1"
            android:layout_gravity="center_horizontal|top"
            android:layout_row="0"
            android:text="@string/presency"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/textView1"
            android:layout_column="2"
            android:layout_gravity="center_horizontal|top"
            android:layout_row="0"
            android:text="@string/bills"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#000000" />

        <ImageButton
            android:id="@+id/imageButton1"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_column="1"
            android:layout_gravity="left|top"
            android:layout_row="1"
            android:background="@null"
            android:scaleType="fitXY"
            android:src="@drawable/ic_presency" />

        <ImageButton
            android:id="@+id/billsbutton"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_column="2"
            android:layout_gravity="left|top"
            android:layout_row="1"
            android:background="@null"
            android:scaleType="fitXY"
            android:src="@drawable/ic_bills" />

        <ImageButton
            android:id="@+id/checkinbutton"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_column="0"
            android:layout_gravity="left|top"
            android:layout_row="1"
            android:background="@null"
            android:scaleType="fitXY"
            android:src="@drawable/ic_checkin" />
    </GridLayout>

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentEnd="false"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="false"
        android:layout_marginLeft="14dp"
        android:scaleType="fitStart"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/naam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TextView01"
        android:layout_marginTop="22dp"
        android:layout_toRightOf="@+id/imageView2"
        android:padding="10dp"
        android:text="@string/naam"
        android:textColor="@android:color/holo_green_light"
        android:textSize="25sp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignLeft="@+id/imageView1"
        android:layout_alignTop="@+id/naam"
        android:layout_marginLeft="28dp"
        android:src="@drawable/ic_nopic" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/GridLayout1"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="14dp"
        android:text="@string/memberinfo"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/main_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/naam"
        android:layout_marginRight="-70dp"
        android:layout_marginTop="24dp"
        android:text="@string/kikkersprong"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="40sp" />

    <TextClock
        android:id="@+id/textClock1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/main_title"
        android:layout_below="@+id/main_title"
        android:format12Hour="MMM dd, yyyy k:mm:ss"
        android:format24Hour="dd MMMM yyyy hh:mm"
        android:text="TextClock"
        android:timeZone="GMT+0200" />

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:text="@string/welkom"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#FFFFFF"
        android:textSize="30sp" />

</RelativeLayout>