<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rekeningenlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgcolor"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="be.khleuven.bjornbillen.kikkersprong.controller.BillsActivity" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentEnd="false"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="false"
        android:layout_alignParentTop="true"
        android:contentDescription="infobutton"
        android:scaleType="fitStart"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/betalingen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView1"
        android:layout_marginBottom="36dp"
        android:layout_marginLeft="44dp"
        android:layout_toRightOf="@+id/imageView1"
        android:text="@string/bills"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold" />

    <ListView
        android:id="@+id/listViewBills"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView1"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="40dp"
        android:listSelector="@drawable/list_selector" >
    </ListView>

    <TextView
        android:id="@+id/billname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/listView1"
        android:layout_below="@+id/imageView1"
        android:text="@string/membername"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/betaald"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/billname"
        android:layout_alignBottom="@+id/billname"
        android:layout_alignRight="@+id/listViewBills"
        android:text="@string/betaald"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/memberbillname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/betaald"
        android:layout_alignBottom="@+id/betaald"
        android:layout_toLeftOf="@+id/betaald"
        android:layout_marginRight="20dp"
        android:text="@string/amount"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>
